--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1342,7 +1342,7 @@
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
                 "lineHeight": "140%",
-                "fontWeight": "{config.fontWeight.semibold}",
+                "fontWeight": "{config.fontWeight.medium}",
                 "fontSize": "{config.fontSize.subtitle.text}"
               },
               "type": "typography"
@@ -1351,7 +1351,7 @@
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
                 "lineHeight": "140%",
-                "fontWeight": "{config.fontWeight.bold}",
+                "fontWeight": "{config.fontWeight.semibold}",
                 "fontSize": "{config.fontSize.subtitle.text}"
               },
               "type": "typography"
@@ -1362,7 +1362,7 @@
               "value": {
                 "fontFamily": "{config.fontFamily.symbol}",
                 "lineHeight": "140%",
-                "fontWeight": "{config.fontWeight.semibold}",
+                "fontWeight": "{config.fontWeight.medium}",
                 "fontSize": "{config.fontSize.subtitle.symbol}"
               },
               "type": "typography"
@@ -1371,7 +1371,7 @@
               "value": {
                 "fontFamily": "{config.fontFamily.symbol}",
                 "lineHeight": "140%",
-                "fontWeight": "{config.fontWeight.bold}",
+                "fontWeight": "{config.fontWeight.semibold}",
                 "fontSize": "{config.fontSize.subtitle.symbol}"
               },
               "type": "typography"
