--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1447,7 +1447,7 @@
                 "default": {
                   "value": {
                     "fontFamily": "{config.fontFamily.primary}",
-                    "fontWeight": "{app.fontWeight.body.text.default}",
+                    "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
                     "fontSize": "{config.fontSize.body.text}"
                   },
@@ -1456,7 +1456,7 @@
                 "strong": {
                   "value": {
                     "fontFamily": "{config.fontFamily.primary}",
-                    "fontWeight": "{app.fontWeight.body.text.strong}",
+                    "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
                     "fontSize": "{config.fontSize.body.text}"
                   },
@@ -1473,7 +1473,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
                   },
                   "type": "typography"
                 },
@@ -1482,7 +1482,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
                   },
                   "type": "typography"
                 }
@@ -1493,7 +1493,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
                   },
                   "type": "typography"
                 },
@@ -1502,7 +1502,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text} - 0.125rem"
+                    "fontSize": "{config.fontSize.body.symbol} - 0.125rem"
                   },
                   "type": "typography"
                 }
@@ -1515,7 +1515,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{config.fontSize.body.symbol}"
                   },
                   "type": "typography"
                 },
@@ -1524,7 +1524,7 @@
                     "fontFamily": "{config.fontFamily.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{config.fontSize.body.symbol}"
                   },
                   "type": "typography"
                 }
@@ -1533,18 +1533,18 @@
                 "default": {
                   "value": {
                     "fontFamily": "{config.fontFamily.symbol}",
-                    "fontWeight": "{app.fontWeight.body.text.default}",
+                    "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{config.fontSize.body.symbol}"
                   },
                   "type": "typography"
                 },
                 "strong": {
                   "value": {
                     "fontFamily": "{config.fontFamily.symbol}",
-                    "fontWeight": "{app.fontWeight.body.text.strong}",
+                    "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
-                    "fontSize": "{config.fontSize.body.text}"
+                    "fontSize": "{config.fontSize.body.symbol}"
                   },
                   "type": "typography"
                 }
@@ -2334,50 +2334,6 @@
       }
     },
     "fontWeight": {
-      "display": {
-        "text": {
-          "default": {
-            "value": "{config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.bold}",
-            "type": "fontWeights"
-          }
-        },
-        "symbol": {
-          "default": {
-            "value": "{config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.bold}",
-            "type": "fontWeights"
-          }
-        }
-      },
-      "title": {
-        "text": {
-          "default": {
-            "value": "{config.fontWeight.semibold}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.bold}",
-            "type": "fontWeights"
-          }
-        },
-        "symbol": {
-          "default": {
-            "value": "{config.fontWeight.semibold}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.bold}",
-            "type": "fontWeights"
-          }
-        }
-      },
       "callout": {
         "text": {
           "default": {
@@ -2386,50 +2342,6 @@
           },
           "strong": {
             "value": "{config.fontWeight.semibold}",
-            "type": "fontWeights"
-          }
-        },
-        "symbol": {
-          "default": {
-            "value": "{config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.semibold}",
-            "type": "fontWeights"
-          }
-        }
-      },
-      "subtitle": {
-        "text": {
-          "default": {
-            "value": "{config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.semibold}",
-            "type": "fontWeights"
-          }
-        },
-        "symbol": {
-          "default": {
-            "value": "{config.fontWeight.medium}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.semibold}",
-            "type": "fontWeights"
-          }
-        }
-      },
-      "body": {
-        "text": {
-          "default": {
-            "value": "{config.fontWeight.text}",
-            "type": "fontWeights"
-          },
-          "strong": {
-            "value": "{config.fontWeight.medium}",
             "type": "fontWeights"
           }
         },
