--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1599,7 +1599,7 @@
             "default": {
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
-                "fontWeight": "{config.fontWeight.text}",
+                "fontWeight": "{config.fontWeight.medium}",
                 "lineHeight": "160%",
                 "fontSize": "{config.fontSize.footnote.text}"
               },
@@ -1608,7 +1608,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{config.fontFamily.primary}",
-                "fontWeight": "{config.fontWeight.medium}",
+                "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
                 "fontSize": "{config.fontSize.footnote.text}"
               },
