--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1745,7 +1745,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{config.fontSize.callout.symbol}"
@@ -1754,7 +1754,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{config.fontSize.callout.symbol}"
@@ -1765,7 +1765,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
@@ -1774,7 +1774,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{config.fontSize.callout.symbol} + 0.125rem"
@@ -1785,7 +1785,7 @@
             "lg": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "140%",
                   "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
@@ -1794,7 +1794,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.primary}",
+                  "fontFamily": "{config.fontFamily.symbol}",
                   "fontWeight": "{config.fontWeight.semibold}",
                   "lineHeight": "140%",
                   "fontSize": "{config.fontSize.callout.symbol} + 0.25rem"
